--- a/TOTO/.vscode/settings.json
+++ b/TOTO/.vscode/settings.json
@@ -2,7 +2,8 @@
   "files.associations": {
     "ostream": "cpp",
     "iostream": "cpp",
-    "string_view": "cpp"
+    "string_view": "cpp",
+    "cmath": "cpp"
   },
   "C_Cpp.errorSquiggles": "Enabled"
 }
